<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chase.studentattendance.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="200dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username_textinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="275dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_textinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="login"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="344dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
